Correction Elo, Documentation, Routes de fin de match
